data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_710.wast
;; 1. **Test: Incorrect Condition Handling for `br_if` with Zero Value**    - **Description:** Create a test where a `br_if` instruction is supposed to evaluate a condition that results in `0` (false). The `br_if` should not take the branch, and subsequent instructions should execute.    - **Constraint:** Ensure that the condition is correctly evaluated to `0`, and the `br_if` does not take the branch, verifying correct condition evaluation.

(assert_invalid
  (module
    (func
      (block 
        (i32.const 0)
        (br_if 0)
        (i32.const 1)
        (drop)
      )
    )
  )
  "type mismatch"
)